Document git workflow for deployments

--- a/finance-web-app/index.html
+++ b/finance-web-app/index.html
@@ -2,13 +2,18 @@
 <html lang="fa" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#0ea5e9" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>دستیار مالی هوشمند</title>
+    <title>چت حساب | دستیار مالی هوشمند</title>
+    <meta
+      name="description"
+      content="چت حساب یک دستیار مالی فارسی است که به شما کمک می‌کند سؤالات مالی خود را مطرح کنید و پاسخ‌های دقیق دریافت کنید."
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
